[tool.poetry]
name = "poetry-publish"
version = "0.1.0.dev1"
description = ""
authors = ["JensDiemer <git@jensdiemer.de>"]

[tool.poetry.dependencies]
python = "^3.6"
python-creole = "^1.4.2"

[tool.poetry.dev-dependencies]
tox = "^3.14.3"
pytest = "^4.6"
pytest-cov = "^2.8.1"
isort = "^4.3.21"
flake8 = "^3.7.9"
flynt = "^0.40.1"
autopep8 = "^1.4.4"

[tool.poetry.scripts]
update_rst_readme = "poetry_publish.self:update_poetry_publish_readme"
publish = "poetry_publish.self:publish_poetry_publish"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
